# teravars

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  ROADMAP.md  apm.lock.yaml  apm.yml  renovate.json
.github/workflows/: apm-bump.yml  ci.yml  release.yml
.kata/: applied.toml
src/: engine.rs  error.rs  lib.rs  merge.rs  system.rs  vars.rs
src/helpers/: env.rs  filters.rs  mod.rs  os.rs  shell.rs
tests/: merge.rs
