[package]
name = "teravars"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
authors = ["yukimemi <yukimemi@gmail.com>"]
license = "MIT"
description = "Tera templating + smart [vars] handling for self-rendering TOML configs"
repository = "https://github.com/yukimemi/teravars"
readme = "README.md"
categories = ["template-engine", "config"]
keywords = ["tera", "template", "toml", "config"]

[features]
default = ["std-helpers"]
std-helpers = ["dep:dirs"]
shell = []
merge = []
tracing = ["dep:tracing"]

[dependencies]
tera = "1.20.1"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
whoami = "2.1.2"

dirs = { version = "6", optional = true }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
